# seuphyx

./: .gitignore  README.md  pyproject.toml
2025.10.20/oil_drop_101013367_章烨晖/: oil_drop.csv  支持向量机_SVM_001.joblib
outputs/20251020_010417_irKS6v/: checkpoint.pkl  hall_of_fame.csv
outputs/20251020_042037_y21pEk/: checkpoint.pkl  hall_of_fame.csv.bak
outputs/20251020_153310_OcUvMV/: checkpoint.pkl  hall_of_fame.csv.bak
outputs/20251020_153419_aPAVzq/: checkpoint.pkl
outputs/20251020_190357_OLCJIa/: checkpoint.pkl  hall_of_fame.csv.bak
outputs/20251020_190711_hNm4kh/: checkpoint.pkl
outputs/20251020_190903_hyU5dq/: checkpoint.pkl
outputs/20251020_191106_wXvv9L/: checkpoint.pkl
outputs/20251020_191242_v2CKI8/: checkpoint.pkl
outputs/20251020_191736_5qSxmg/: checkpoint.pkl  hall_of_fame.csv
outputs/20251020_192156_yDkf7S/: checkpoint.pkl
outputs/20251020_201400_YGbMJC/: checkpoint.pkl
outputs/20251020_201611_RKRbmv/: checkpoint.pkl
src/seuphyx/cli/: main.py
src/seuphyx/core/oil/: app.py
src/seuphyx/core/oil/tabs/: __init__.py  regression.py  tab_classify.py  tab_record.py  tab_regress.py  tab_report.py
src/seuphyx/data/: oil_drop_reference.csv
src/seuphyx/web/: utils.py
